--- a/build.properties
+++ b/build.properties
@@ -21,9 +21,9 @@ project.version=1.0-SNAPSHOT
 junit.console.jar=${lib.dir}/junit-platform-console-standalone.jar
 
 # scp target
-scp.server=localhost
-scp.dest=/tmp/demo_scp/
-scp.identity.key=
+scp.server=sus@localhost
+scp.dest=/tmp/demo_scp
+scp.identity.key=/home/sus/.ssh/id_rsa_ant
 
 # music playback
 music.player=xdg-open
