исправлена конвертация локализаций

--- a/build.properties
+++ b/build.properties
@@ -30,8 +30,9 @@ music.player=xdg-open
 music.file=resources/music/complete.mp3
 
 # native2ascii locales
-locales.src.dir=src/main/resources/i18n-src
-locales.dest.dir=src/main/resources/i18n
+i18n.src.dir=src/main/resources/i18n-src
+i18n.converted.dir=${build.dir}/i18n
+i18n.final.dir=${classes.dir}/i18n
 
 # env (альтернативные окружения)
 env.java8.exec=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
