--- a/build.properties
+++ b/build.properties
@@ -25,14 +25,18 @@ scp.server=sus@localhost
 scp.dest=/tmp/demo_scp
 scp.identity.key=/home/sus/.ssh/id_rsa_ant
 
-# music playback
-music.player=xdg-open
-music.file=resources/music/complete.mp3
-
 # native2ascii locales
 i18n.src.dir=src/main/resources/i18n-src
 i18n.converted.dir=${build.dir}/i18n
 i18n.final.dir=${classes.dir}/i18n
+
+# music playback
+music.player=xdg-open
+music.file=resources/music/complete.mp3
+
+# doc
+checksum.md5=MD5
+checksum.sha1=SHA-1
 
 # env (альтернативные окружения)
 env.java8.exec=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
