--- a/build.properties
+++ b/build.properties
@@ -39,8 +39,9 @@ checksum.md5=MD5
 checksum.sha1=SHA-1
 
 # env (альтернативные окружения)
-env.java8.exec=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
-env.java11.exec=/usr/lib/jvm/java-11-openjdk-amd64/bin/java
+env.java.version=11
+env.java=/usr/lib/jvm/java-11-openjdk-amd64/bin/java
+env.javac=/usr/lib/jvm/java-11-openjdk-amd64/bin/javac
 env.vm.args=-Xmx512m -Dexample.flag=true
 
 # alt replacement rules (replaceregexp)
